# MiniKV

./: CMakeLists.txt  README.md  main.cpp
headers/: KeyManager.h  MiniKv.h  Persistence.h  User.h
sources/: KeyManager.cpp  MiniKv.cpp  Persistence.cpp  User.cpp
